--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -468,7 +468,7 @@ import Footer from '../components/Footer.astro';
                         <i data-lucide="linkedin"></i>
                         <span>LinkedIn</span>
                     </a>
-                    <a href="https://github.com/kimberlyjeske" class="button button-secondary">
+                    <a href="https://github.com/kimtastic" class="button button-secondary">
                         <i data-lucide="github"></i>
                         <span>GitHub</span>
                     </a>
