update github link

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -483,7 +483,7 @@ import Footer from '../components/Footer.astro';
             <div class="footer-content">
                 <p>&copy; 2025 Kim Jeske. All rights reserved.</p>
                 <div class="social-links">
-                    <a href="https://github.com/kimberlyjeske"><i data-lucide="github"></i></a>
+                    <a href="https://github.com/kimtastic"><i data-lucide="github"></i></a>
                     <a href="https://www.linkedin.com/in/kimberlyjeske/"><i data-lucide="linkedin"></i></a>
                 </div>
             </div>
